--- a/Languages/PortugueseBrazilian/Keyed/HumanResources_keys.xml
+++ b/Languages/PortugueseBrazilian/Keyed/HumanResources_keys.xml
@@ -19,6 +19,7 @@
   <ClickToAssignForDocumentation>Botão esquerdo para marcar para documentação.</ClickToAssignForDocumentation>
   <ClickToUnassign>Botão esquerdo para desmarcar.</ClickToUnassign>
   <RightClickToTree>Botão direito para abrir na árvore de pesquisa.</RightClickToTree>
+  <AssignedTo>{0} foi encarregado de:</AssignedTo>
   <AssignedToResearch>{0} foi encarregado de pesquisar isto.</AssignedToResearch>
   <AssignedToStudy>{0} foi encarregado de estudar isto.</AssignedToStudy>
   <AssignedToDocument>{0} foi encarregado de documentar isto.</AssignedToDocument>
