--- a/Languages/Russian/Keyed/HumanResources_keys.xml
+++ b/Languages/Russian/Keyed/HumanResources_keys.xml
@@ -19,7 +19,7 @@
 	<ClickToAssignForDocumentation>ЛКМ, чтобы назначить для документирования</ClickToAssignForDocumentation>
 	<ClickToUnassign>ЛКМ, чтобы отменить назначение</ClickToUnassign>
 	<RightClickToTree>ПКМ, чтобы показать в окне исследований</RightClickToTree>
-	<AssignedTo>{0} {0_gender ? назначен : назначена} для:</AssignedTo>
+	<AssignedTo>{0} имеет следующие назначения:\n</AssignedTo>
 	<AssignedToResearch>{0} {0_gender ? назначен : назначена} для исследования этой технологии</AssignedToResearch>
 	<AssignedToStudy>{0} {0_gender ? назначен : назначена} для изучения этой технологии</AssignedToStudy>
 	<AssignedToDocument>{0} {0_gender ? назначен : назначена} для документирования этой технологии</AssignedToDocument>
