--- a/Languages/French/DefInjected/JobDef/Jobs.xml
+++ b/Languages/French/DefInjected/JobDef/Jobs.xml
@@ -10,5 +10,10 @@
   <!--EN: practicing-->
   <TrainWeapon.reportString>S'entraîne avec</TrainWeapon.reportString>
 
+  <!--NeW-->
+  <!--EN: training melee.-->
+  <PlayAtDummy.reportString>training melee.</PlayAtDummy.reportString>
+  <!--EN: training shooting.-->
+  <PlayAtTarget.reportString>training shooting.</PlayAtTarget.reportString>
 
 </LanguageData> 
