--- a/Languages/PortugueseBrazilian/DefInjected/JobDef/TranslateJobs.xml
+++ b/Languages/PortugueseBrazilian/DefInjected/JobDef/TranslateJobs.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <LanguageData>
-  <LearnTech.reportString>aprendendo TargetA.</LearnTech.reportString>
-  <DocumentTech.reportString>documentando TargetA.</DocumentTech.reportString>
-  <ResearchTech.reportString>pesquisando TargetA.</ResearchTech.reportString>
-  <TrainWeapon.reportString>praticando TargetA.</TrainWeapon.reportString>
-
-
-
+  <LearnTech.reportString>aprendendo.</LearnTech.reportString>
+  <DocumentTech.reportString>documentando.</DocumentTech.reportString>
+  <ResearchTech.reportString>pesquisando.</ResearchTech.reportString>
+  <TrainWeapon.reportString>praticando.</TrainWeapon.reportString>
+  <PlayAtDummy.reportString>praticando luta corpo-a-corpo.</PlayAtDummy.reportString>
+  <PlayAtTarget.reportString>praticando tiro.</PlayAtTarget.reportString>
 
 </LanguageData>
