--- a/Languages/ChineseSimplified/Keyed/HumanResources_keys.xml
+++ b/Languages/ChineseSimplified/Keyed/HumanResources_keys.xml
@@ -49,13 +49,24 @@
   <!--EN: Defines the pool from which to draw technologies for the player's colonists when they are created.-->
   <TechPoolModeDesc>定义玩家派系殖民者的科技池。当玩家派系的殖民者被生成时，将从中随机抽选若干项开局自带科技。</TechPoolModeDesc>
   <!--EN: both faction settings-->
-  <TechPoolMode_Both>以下二者</TechPoolMode_Both>
+ 
+  <!--NEW--><TechPoolIncludesStartingTitle>...the faction's default starting techs</TechPoolIncludesStartingTitle>
+  <!--NEW--><TechPoolIncludesStartingDesc>If checked, the knowledge pool for new colonists will include the default starting technologies for your faction.</TechPoolIncludesStartingDesc>
+  <!--NEW--><TechPoolIncludesTechLevelTitle>...the faction's tech level</TechPoolIncludesTechLevelTitle>
+  <!--NEW--><TechPoolIncludesTechLevelDesc>If checked, the knowledge pool for new colonists will include all technologies from your faction's tech level.</TechPoolIncludesTechLevelDesc>
+  <!--NEW--><TechPoolIncludesBackgroundTitle>...the pawn's background</TechPoolIncludesBackgroundTitle>
+  <!--NEW--><TechPoolIncludesBackgroundDesc>If checked, the individual pawn's backstory will be taken into consideration. This will make their expertise follow their biography more closely, but might also result in colonists out of tune with their faction's original tech level. It's fun though!</TechPoolIncludesBackgroundDesc>
+  <!--NEW--><TechPoolIncludesScenarioTitle>...the scenario starting research</TechPoolIncludesScenarioTitle>
+
+  <!--OLD-->
+  <!--<TechPoolMode_Both>以下二者</TechPoolMode_Both>-->
   <!--EN: the faction's tech level only-->
-  <TechPoolMode_TechLevel>玩家派系的科技水平</TechPoolMode_TechLevel>
+  <!--<TechPoolMode_TechLevel>玩家派系的科技水平</TechPoolMode_TechLevel>-->
   <!--EN: the starting techs for that faction only-->
-  <TechPoolMode_Starting>玩家派系的开局科技</TechPoolMode_Starting>
+  <!--<TechPoolMode_Starting>玩家派系的开局科技</TechPoolMode_Starting>-->
   <!--EN: Also include starting research parts from the scenario.-->
-  <TechPoolIncludesScenarioTitle>同时包括剧本设定的开局科技</TechPoolIncludesScenarioTitle>
+  <!--<TechPoolIncludesScenarioTitle>同时包括剧本设定的开局科技</TechPoolIncludesScenarioTitle>-->
+  
   <!--EN: If checked, any technologies you add on the scenario editor will also be included on the knowledge pool for new colonists.-->
   <TechPoolIncludesScenarioDesc>如果选中，还将包括您在剧本编辑器中添加的开局科技。</TechPoolIncludesScenarioDesc>
   <!--EN: Combat specialists start with weapons from...-->
