--- a/Languages/ChineseTraditional/Keyed/HumanResources_keys.xml
+++ b/Languages/ChineseTraditional/Keyed/HumanResources_keys.xml
@@ -50,14 +50,25 @@
   <TechPoolModeTitle>殖民者的開局自帶科技來自…</TechPoolModeTitle>
   <!--EN: Defines the pool from which to draw technologies for the player's colonists when they are created.-->
   <TechPoolModeDesc>定義玩家派系殖民者的科技池。當玩家派系的殖民者被生成時，將從中隨機抽選若幹項開局自帶科技。</TechPoolModeDesc>
+  
+  <!--NEW--><TechPoolIncludesStartingTitle>...the faction's default starting techs</TechPoolIncludesStartingTitle>
+  <!--NEW--><TechPoolIncludesStartingDesc>If checked, the knowledge pool for new colonists will include the default starting technologies for your faction.</TechPoolIncludesStartingDesc>
+  <!--NEW--><TechPoolIncludesTechLevelTitle>...the faction's tech level</TechPoolIncludesTechLevelTitle>
+  <!--NEW--><TechPoolIncludesTechLevelDesc>If checked, the knowledge pool for new colonists will include all technologies from your faction's tech level.</TechPoolIncludesTechLevelDesc>
+  <!--NEW--><TechPoolIncludesBackgroundTitle>...the pawn's background</TechPoolIncludesBackgroundTitle>
+  <!--NEW--><TechPoolIncludesBackgroundDesc>If checked, the individual pawn's backstory will be taken into consideration. This will make their expertise follow their biography more closely, but might also result in colonists out of tune with their faction's original tech level. It's fun though!</TechPoolIncludesBackgroundDesc>
+  <!--NEW--><TechPoolIncludesScenarioTitle>...the scenario starting research</TechPoolIncludesScenarioTitle>
+  
+  <!--OLD-->
   <!--EN: both faction settings-->
-  <TechPoolMode_Both>以下二者</TechPoolMode_Both>
+  <!--<TechPoolMode_Both>以下二者</TechPoolMode_Both>-->
   <!--EN: the faction's tech level only-->
-  <TechPoolMode_TechLevel>玩家派系的科技水平</TechPoolMode_TechLevel>
+  <!--<TechPoolMode_TechLevel>玩家派系的科技水平</TechPoolMode_TechLevel>-->
   <!--EN: the starting techs for that faction only-->
-  <TechPoolMode_Starting>玩家派系的開局科技</TechPoolMode_Starting>
+  <!--<TechPoolMode_Starting>玩家派系的開局科技</TechPoolMode_Starting>-->
   <!--EN: Also include starting research parts from the scenario.-->
-  <TechPoolIncludesScenarioTitle>同時包括劇本設定的開局科技</TechPoolIncludesScenarioTitle>
+  <!--<TechPoolIncludesScenarioTitle>同時包括劇本設定的開局科技</TechPoolIncludesScenarioTitle>-->
+  
   <!--EN: If checked, any technologies you add on the scenario editor will also be included on the knowledge pool for new colonists.-->
   <TechPoolIncludesScenarioDesc>如果選中，還將包括您在劇本編輯器中添加的開局科技。</TechPoolIncludesScenarioDesc>
   <!--EN: Combat specialists start with weapons from...-->
