--- a/Languages/French/Keyed/HumanResources_keys.xml
+++ b/Languages/French/Keyed/HumanResources_keys.xml
@@ -19,10 +19,8 @@
   <ShowAvailable>Afficher les technologies disponibles à l'apprentissage</ShowAvailable>
   <!--EN: Compact view.-->
   <ShowCompact>Vue compacte</ShowCompact>
-    
   <!--EN: Show Assignments.-->
   <ShowAssignment>Voir les affectations..</ShowAssignment>
-
   <!--EN: Expand-->
   <Expand>Étendre</Expand>
   <!--EN: Collapse-->
@@ -39,10 +37,8 @@
   <ClickToUnassign>Clic-gauche pour annuler l'affectation.</ClickToUnassign>
   <!--EN: Right-click to show on Research tree.-->
   <RightClickToTree>Clic-droit pour afficher dans l'arbre des recherches.</RightClickToTree>
-  
   <!--EN: {0} is tasked with:-->
   <AssignedTo>{0} est affecté à :</AssignedTo>
-  
   <!--EN: {0} is tasked with researching this.-->
   <AssignedToResearch>{0} est affectée à cette recherche.</AssignedToResearch>
   <!--EN: {0} is tasked with studying this.-->
@@ -58,14 +54,25 @@
   <TechPoolModeTitle>La génération de connaissance s'inspire de…</TechPoolModeTitle>
   <!--EN: Defines the pool from which to draw technologies for the player's colonists when they are created.-->
   <TechPoolModeDesc>Détermine l'ensemble à partir duquel choisir les technologies lors de la création des colons.</TechPoolModeDesc>
+
+  <!--NEW--><TechPoolIncludesStartingTitle>...the faction's default starting techs</TechPoolIncludesStartingTitle>
+  <!--NEW--><TechPoolIncludesStartingDesc>If checked, the knowledge pool for new colonists will include the default starting technologies for your faction.</TechPoolIncludesStartingDesc>
+  <!--NEW--><TechPoolIncludesTechLevelTitle>...the faction's tech level</TechPoolIncludesTechLevelTitle>
+  <!--NEW--><TechPoolIncludesTechLevelDesc>If checked, the knowledge pool for new colonists will include all technologies from your faction's tech level.</TechPoolIncludesTechLevelDesc>
+  <!--NEW--><TechPoolIncludesBackgroundTitle>...the pawn's background</TechPoolIncludesBackgroundTitle>
+  <!--NEW--><TechPoolIncludesBackgroundDesc>If checked, the individual pawn's backstory will be taken into consideration. This will make their expertise follow their biography more closely, but might also result in colonists out of tune with their faction's original tech level. It's fun though!</TechPoolIncludesBackgroundDesc>
+  <!--NEW--><TechPoolIncludesScenarioTitle>...the scenario starting research</TechPoolIncludesScenarioTitle>
+    
+  <!--OLD-->
   <!--EN: both faction settings-->
-  <TechPoolMode_Both>Paramètres des deux factions</TechPoolMode_Both>
+  <!--<TechPoolMode_Both>Paramètres des deux factions</TechPoolMode_Both>-->
   <!--EN: the faction's tech level only-->
-  <TechPoolMode_TechLevel>Le niveau de technologie de la faction uniquement</TechPoolMode_TechLevel>
+  <!--<TechPoolMode_TechLevel>Le niveau de technologie de la faction uniquement</TechPoolMode_TechLevel>-->
   <!--EN: the starting techs for that faction only-->
-  <TechPoolMode_Starting>Les technologies de départ pour cette faction uniquement</TechPoolMode_Starting>
+  <!--<TechPoolMode_Starting>Les technologies de départ pour cette faction uniquement</TechPoolMode_Starting>-->
   <!--EN: Also include starting research parts from the scenario.-->
-  <TechPoolIncludesScenarioTitle>Inclure également les recherches de départ du scénario.</TechPoolIncludesScenarioTitle>
+  <!--<TechPoolIncludesScenarioTitle>Inclure également les recherches de départ du scénario.</TechPoolIncludesScenarioTitle>-->
+  
   <!--EN: If checked, any technologies you add on the scenario editor will also be included on the knowledge pool for new colonists.-->
   <TechPoolIncludesScenarioDesc>Si activé, toute technologie ajoutée à l'éditeur de scénario sera aussi incluse dans la base de connaissances de vos colons.</TechPoolIncludesScenarioDesc>
   <!--EN: Combat specialists start with weapons from...-->
@@ -82,7 +89,6 @@
   <FreeScenarioWeaponsTitle>Tous les colons débutent avec des armes du scénario</FreeScenarioWeaponsTitle>
   <!--EN: If checked, any weapons you add on the scenario editor will also be included on the list of weapons the player's colonists can use. (The vanilla "Rich Explorer" scenario was patched to always do this, regardless of what's chosen here)-->
   <FreeScenarioWeaponsDesc>Si activé, toute arme ajoutée via l'éditeur de scénario sera aussi incluse dans la liste des armes que vos colons pourront utiliser. (Le scénario "vanilla" Riche explorateur a été codé pour toujours implémenter ceci, et ignore donc ce paramètre).</FreeScenarioWeaponsDesc>
-  
   <!--EN: Learn melee weapons by group.-->
   <LearnMeleeWeaponsByGroupTitle>Apprendre à manier des armes de corps-à-corps en groupe.</LearnMeleeWeaponsByGroupTitle>
   <!--EN: When learning melee weapons, learn all weapons unlocked by that technology at the same time.-->
@@ -98,7 +104,6 @@
   <EnableJoyGiverTitle>Utiliser les lieux d'entrainement pour le loisir.</EnableJoyGiverTitle>
   <!--EN : Pawns will go practice at the target stand and training dummy just to blow off some steam.-->
   <EnableJoyGiverDesc>Les personnages iront s'entrainer à la cible et au manequin pour se défouler.</EnableJoyGiverDesc>
-
   <!--EN: Difficulty settings slows down research.-->
   <ResearchSpeedTiedToDifficultyTitle>Le niveau de difficulté ralentit la recherche.</ResearchSpeedTiedToDifficultyTitle>
   <!--EN: If checked, the base speed for research is tied to the difficulty settings, with no changes on Easy and up to 30% slower on Hard. If unchecked, it defaults to 10% slower than vanilla.-->
@@ -149,10 +154,8 @@
   <NothingToAddToLibrary>Tu ne sais rien, {0_nameFull}</NothingToAddToLibrary>
   <!--EN: {0_nameDef} has read all the books.-->
   <AlreadyKnowsTheWholeLibrary>{0_nameDef} a déjà lu tous les livres</AlreadyKnowsTheWholeLibrary>
-
   <!--EN: Nowhere to store the book when it's finished.-->
   <NoSpaceInLibrary>Nulle part où ranger le livre quand il est fini.</NoSpaceInLibrary>
-
   <!--EN: {0_nameDef} is missing basic knowledge on those subjects.-->
   <LacksFundamentalKnowledge>{0_nameDef} manque des connaissances de base sur ces sujets.</LacksFundamentalKnowledge>
   <!--EN: No available weapons to train.-->
@@ -177,7 +180,6 @@
   <EvilWeapon>Ce colon ne comprend pas cette arme, et en a un peu peur.</EvilWeapon>
   <!--EN: {0} is already known.-->
   <TechAlreadyKnown>{0} est déjà connu.e.</TechAlreadyKnown>
-
   <!--EN: Invalid equipment.-->
   <NoWeaponEquipped>Équipement incorrect.</NoWeaponEquipped>
   
