--- a/Languages/Japanese/Keyed/HumanResources_keys.xml
+++ b/Languages/Japanese/Keyed/HumanResources_keys.xml
@@ -48,14 +48,25 @@
   <TechPoolModeTitle>入植者の初期テクノロジーを決めるのは…</TechPoolModeTitle>
   <!--EN: Defines the pool from which to draw technologies for the player's colonists when they are created.-->
   <TechPoolModeDesc>プレーヤー派閥の入植者が作成される時、その身に付くテクノロジーを抽選するプールを設定します。</TechPoolModeDesc>
+  
+  <!--NEW--><TechPoolIncludesStartingTitle>...the faction's default starting techs</TechPoolIncludesStartingTitle>
+  <!--NEW--><TechPoolIncludesStartingDesc>If checked, the knowledge pool for new colonists will include the default starting technologies for your faction.</TechPoolIncludesStartingDesc>
+  <!--NEW--><TechPoolIncludesTechLevelTitle>...the faction's tech level</TechPoolIncludesTechLevelTitle>
+  <!--NEW--><TechPoolIncludesTechLevelDesc>If checked, the knowledge pool for new colonists will include all technologies from your faction's tech level.</TechPoolIncludesTechLevelDesc>
+  <!--NEW--><TechPoolIncludesBackgroundTitle>...the pawn's background</TechPoolIncludesBackgroundTitle>
+  <!--NEW--><TechPoolIncludesBackgroundDesc>If checked, the individual pawn's backstory will be taken into consideration. This will make their expertise follow their biography more closely, but might also result in colonists out of tune with their faction's original tech level. It's fun though!</TechPoolIncludesBackgroundDesc>
+  <!--NEW--><TechPoolIncludesScenarioTitle>...the scenario starting research</TechPoolIncludesScenarioTitle>
+
+  <!--OLD-->
   <!--EN: both faction settings-->
-  <TechPoolMode_Both>下記両方</TechPoolMode_Both>
+  <!--<TechPoolMode_Both>下記両方</TechPoolMode_Both>-->
   <!--EN: the faction's tech level only-->
-  <TechPoolMode_TechLevel>プレーヤー派閥のテクノロジーレベル</TechPoolMode_TechLevel>
+  <!--<TechPoolMode_TechLevel>プレーヤー派閥のテクノロジーレベル</TechPoolMode_TechLevel>-->
   <!--EN: the starting techs for that faction only-->
-  <TechPoolMode_Starting>プレーヤー派閥の初期テクノロジー</TechPoolMode_Starting>
+  <!--<TechPoolMode_Starting>プレーヤー派閥の初期テクノロジー</TechPoolMode_Starting>-->
   <!--EN: Also include starting research parts from the scenario.-->
-  <TechPoolIncludesScenarioTitle>シナリオで設定された初期テクノロジーも含みます。</TechPoolIncludesScenarioTitle>
+  <!--<TechPoolIncludesScenarioTitle>シナリオで設定された初期テクノロジーも含みます。</TechPoolIncludesScenarioTitle>-->
+  
   <!--EN: If checked, any technologies you add on the scenario editor will also be included on the knowledge pool for new colonists.-->
   <TechPoolIncludesScenarioDesc>これをチェックすると、あなたがシナリオに追加したテクノロジーも抽選プールに含まれます。</TechPoolIncludesScenarioDesc>
   <!--EN: Combat specialists start with weapons from...-->
